# scalingsnapshots

./: .gitignore  CODEOWNERS  Cargo.toml  LICENSE  README.md  bors.toml  default.nix  flake.nix  shell.nix  times.txt
.github/workflows/: test.yml
analysis/: README.rst  flake.nix  pyproject.toml
analysis/scalingsnapshots/: __main__.py
analysis/ssanalyze/: __main__.py
analysis/tests/: test_scalingsnapshots.py  test_ssanalyze.py
benches/: my_benchmark.rs
data/: .gitignore  README.md  fakedata-initial.json  fakedata.json  fakedata.json.age  pubkeys.txt  pypi-small.json
data/fakedata/data/: events.jsonl  init.jsonl
generate-package-data/: flake.nix  package-data.py  pyproject.toml  testdata
generate-package-data/fetchaur/: .envrc  .gitignore  build_from_tf.sh  flake.nix  main.tf
generate-package-data/generate_package_data/: __init__.py
infra/: driver.sh  flake.nix  main.tf  startup_script.sh
logparser/: README.rst  flake.nix  pyproject.toml  small-pypi-initial.json  small-pypi-output.json
logparser/scalingsnapshots_logs/: __main__.py
logparser/sslogs/: __main__.py  args.py  aur.py  fake_data.py  goodbye.py  hackage.py  identity.py  logs.py  pypi.py  rubygems.py  rubygems_data.json  shortened_python.py  testdata.json  trim.py
logparser/tests/: test_aur.py  test_hackage.py  test_scalingsnapshots.py  test_sslogs.py
nix/: default.nix  rust.nix  sources.json
src/: hash_to_prime.rs  lib.rs  log.rs  main.rs  rsa_accumulator.rs  simulator.rs  tuf.rs  tuf_log.rs  util.rs
src/authenticator/: insecure.rs  merkle.rs  mod.rs  vanilla_tuf.rs
sssim/: Cargo.toml  flake.nix  long.sqlite3.bak  rust-toolchain.toml  test.sh
sssim/benches/: multiply.rs  my_benchmark.rs
sssim/proptest-regressions/: bit_twiddling.txt
sssim/src/: bit_twiddling.rs  hash_to_prime.rs  lib.rs  log.rs  main.rs  multiset.rs  poke.rs  rsa_accumulator.rs  simulator.rs  util.rs
sssim/src/accumulator/: mod.rs  rsa.rs  rsa_optimized.rs
sssim/src/authenticator/: gpg.rs  hackage.rs  insecure.rs  mercury_diff.rs  mercury_hash.rs  mercury_hash_diff.rs  merkle.rs  mod.rs  rsa.rs  sparse_merkle.rs  vanilla_tuf.rs
sssim/src/primitives/: group.rs  group_hidden_order.rs  merkle.rs  mod.rs  prime.rs  refinement.rs  rsa_group.rs  skip_list.rs
