[package]
name = "scalingsnapshots"
authors = [ "Zachary Newman", "Marina Moore" ]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/znewman01/scalingsnapshots"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Treat warnings as a build error.
strict = []

[dependencies]
clap = "3.0.0-beta.4"
