[package]
name = "sssim"
authors = [ "Zachary Newman", "Marina Moore" ]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/znewman01/scalingsnapshots"
license = "MIT"
description = "Simulator for scaling snapshots."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Treat warnings as a build error.
strict = []

[dependencies]
clap = "3.0.0-beta.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
