[package]
name = "sssim"
authors = [ "Zachary Newman", "Marina Moore" ]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/znewman01/scalingsnapshots"
license = "MIT"
description = "Simulator for scaling snapshots."
default-run = "sssim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Treat warnings as a build error.
strict = []

[dependencies]
sha3 = "0.9.1"
digest = "0.9.0"
rug = "1.13.0"
clap = "3.0.0-beta.5"
clap_derive = "=3.0.0-beta.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10"
time = { features = ["macros", "serde-human-readable"], git = "https://github.com/time-rs/time", branch = "main" }

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
