[tool.poetry]
name = "scalingsnapshots-logs"
version = "0.1.0"
description = "Log parser for scalingsnapshots"
authors = ["Zachary Newman", "Marina Moore"]
license = "MIT"

[tool.poetry.scripts]
sslogs = 'scalingsnapshots_logs.__main__:main'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
