[tool.poetry]
name = "sslogs"
version = "0.1.0"
description = "Log parser for scalingsnapshots"
authors = ["Zachary Newman", "Marina Moore"]
license = "MIT"

[tool.poetry.scripts]
sslogs = 'sslogs.__main__:main'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
