[package]
name = "sssim"
authors = [ "Zachary Newman", "Marina Moore" ]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/znewman01/scalingsnapshots"
license = "MIT"
description = "Simulator for scaling snapshots."
default-run = "sssim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Treat warnings as a build error.
strict = []

[dependencies]
sha3 = "0.9.1"
digest = "0.9.0"
rug = { version = "1.13.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1.0", features = [ "derive" ] }
serde_json = "1.0"
itertools = "0.10"
time = { version = "0.3.9", features = ["macros", "serde-human-readable"] }
lazy_static = "1.4.0"
smtree = "0.1.2"
blake3 = "0.3.8"
bincode = "1.3.0"

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
