[package]
name = "sssim"
authors = [ "Zachary Newman", "Marina Moore" ]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/znewman01/scalingsnapshots"
license = "MIT"
description = "Simulator for scaling snapshots."
default-run = "sssim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Treat warnings as a build error.
strict = []

[dependencies]
sha3 = "0.9.1"
console = "0.15.0"
chrono = "0.4.22"
digest = "0.9.0"
rug = { version = "1.13.0", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1.0", features = [ "derive" ] }
serde_json = "1.0"
itertools = "0.10"
time = { version = "0.3.9", features = ["macros", "serde-human-readable"] }
lazy_static = "1.4.0"
smtree = {git="https://github.com/mnm678/smtree"}
blake3 = "0.3.8"
bincode = "1.3.0"
uom = { version = "0.32.0", features = [ "autoconvert", "si", "usize", "u8", "u16", "u32", "u64", "std", "use_serde"] }
rusqlite = { version = "0.27.0", features = ["bundled", "backup"] }
indicatif = "0.16.2"
rayon = "1.5.3"
derivative = "2.2.0"
once_cell = "1.16.0"
num-traits = "0.2.15"
thiserror = "1.0.38"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
